--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -8,6 +8,12 @@ spring:
   profiles:
     include:
       - swaggerEN
+  zipkin:
+    enabled: false
+  sleuth:
+    baggage:
+      remote-fields: X-Client-Ip
+      correlation-fields: X-Client-Ip
 
 info:
   build:
@@ -20,3 +26,5 @@ info:
 logging:
   level:
     it.pagopa.selfcare: ${B4F_ONBOARDING_LOG_LEVEL:DEBUG}
+  pattern:
+    level: "%5p [${spring.zipkin.service.name:${spring.application.name:-}},%X{traceId:-},%X{spanId:-}] [%X{uid:-},%X{X-Client-Ip:-}]"
