--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -4,6 +4,7 @@ rest-client.party-process.onboardingOrganization.path=/onboarding/institution
 rest-client.party-process.getUserInstitutionRelationships.path=external/institutions/{externalId}/relationships
 rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
+rest-client.party-process.createInstitutionUsingExternalId.path=/institutions/{externalId}
 feign.client.config.party-process.connectTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
 feign.client.config.party-process.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
 feign.client.config.party-process.requestInterceptors[1]=it.pagopa.selfcare.commons.connector.rest.interceptor.PartyTraceIdInterceptor
