--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -2,6 +2,10 @@ image:
   repository: selcuacr.azurecr.io/selfcareonboardingbackend
   tag: 0.0.1-SNAPSHOT
 
+ingress:
+  annotations:
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://uat.selfcare.pagopa.it,http://localhost:3000"
+
 autoscaling:
   enabled: false
   minReplicas: 1
