--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -6,6 +6,7 @@ rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
 rest-client.party-process.createInstitutionUsingExternalId.path=/institutions/{externalId}
 rest-client.party-process.getInstitutionManager.path=/external/institutions/{externalId}/products/{productId}/manager
+rest-client.party-process.getInstitutionBillingData.path=/external/institutions/{externalId}/products/{productId}/billing
 feign.client.config.party-process.connectTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
 feign.client.config.party-process.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
 feign.client.config.party-process.requestInterceptors[1]=it.pagopa.selfcare.commons.connector.rest.interceptor.PartyTraceIdInterceptor
