--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -27,4 +27,4 @@ logging:
   level:
     it.pagopa.selfcare: ${B4F_ONBOARDING_LOG_LEVEL:DEBUG}
   pattern:
-    level: "%5p [${spring.zipkin.service.name:${spring.application.name:-}},%X{traceId:-},%X{spanId:-}] [%X{uid:-},%X{X-Client-Ip:-}]"
+    additional-info: ",%X{X-Client-Ip:-}]"
