--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -16,5 +16,5 @@ autoscaling:
 configEnvSpecific:
   JAVA_TOOL_OPTIONS: "-javaagent:/applicationinsights-agent.jar"
   APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
-  B4F_ONBOARDING_LOG_LEVEL: "INFO"
-  REST_CLIENT_LOGGER_LEVEL: "BASIC"
+  B4F_ONBOARDING_LOG_LEVEL: "DEBUG"
+  REST_CLIENT_LOGGER_LEVEL: "FULL"
