--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -1,6 +1,7 @@
 rest-client.party-process.serviceCode=party-process
 rest-client.party-process.base-url=${USERVICE_PARTY_PROCESS_URL:http://localhost:8080/pdnd-interop-uservice-party-process/0.0.1}
 rest-client.party-process.onboardingOrganization.path=/onboarding/institution
+rest-client.party-process.verifyOnboarding.path=/onboarding/institution/{externalId}/products/{productId}
 rest-client.party-process.getUserInstitutionRelationships.path=external/institutions/{externalId}/relationships
 rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
