--- a/connector/rest/src/main/resources/config/party-registry-proxy-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-registry-proxy-rest-client.properties
@@ -1,5 +1,5 @@
 rest-client.party-registry-proxy.serviceCode=party-registry-proxy
-rest-client.party-registry-proxy.base-url=https://api.dev.selfcare.pagopa.it/external/ur
+rest-client.party-registry-proxy.base-url=${USERVICE_PARTY_REGISTRY_PROXY_URL:http://localhost:8080/pdnd-interop-uservice-party-registry-proxy/0.0.1}
 rest-client.party-registry-proxy.getInstitutionsByUserLegalTaxId.path=/v1/info-camere/institutions
 feign.client.config.party-registry-proxy.connectTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
 feign.client.config.party-registry-proxy.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
