Modified environment variable for ms core base url

--- a/connector/rest/src/main/resources/config/ms-core-rest-client.properties
+++ b/connector/rest/src/main/resources/config/ms-core-rest-client.properties
@@ -1,5 +1,5 @@
 rest-client.ms-core.serviceCode=ms-core
-rest-client.ms-core.base-url=${USERVICE_MS_CORE_URL:http://10.1.1.250:80/ms-core/v1}
+rest-client.ms-core.base-url=${MS_CORE_URL:http://10.1.1.250:80/ms-core/v1}
 rest-client.ms-core.onboardingOrganization.path=/onboarding/institution
 rest-client.ms-core.verifyOnboarding.path=/onboarding/institution/{externalId}/products/{productId}
 rest-client.ms-core.getInstitutionByExternalId.path=/external/institutions/{externalId}
