Fixed onboarding institution without businessName + Junit

--- a/connector/rest/src/main/resources/config/party-registry-proxy-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-registry-proxy-rest-client.properties
@@ -1,5 +1,5 @@
 rest-client.party-registry-proxy.serviceCode=party-registry-proxy
-rest-client.party-registry-proxy.base-url=${USERVICE_PARTY_REGISTRY_PROXY_URL:http://localhost:8080/pdnd-interop-uservice-party-registry-proxy/0.0.1}
+rest-client.party-registry-proxy.base-url=${USERVICE_PARTY_REGISTRY_PROXY_URL:http://localhost:8080/external/ur/v1}
 rest-client.party-registry-proxy.getInstitutionsByUserLegalTaxId.path=/info-camere/institutions
 rest-client.party-registry-proxy.matchInstitutionAndUser.path=/national-registries/verify-legal
 rest-client.party-registry-proxy.getInstitutionLegalAddress.path=/national-registries/legal-address
