--- a/helm/pnpg/values.yaml
+++ b/helm/pnpg/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-namespace: selc
+namespace: pnpg
 
 replicaCount: 1
 
