--- a/helm/pnpg/values-prod.yaml
+++ b/helm/pnpg/values-prod.yaml
@@ -6,6 +6,15 @@ image:
 ingress:
   annotations:
     nginx.ingress.kubernetes.io/cors-allow-origin: "https://selfcare.pagopa.it"
+  tls:
+    - hosts:
+        - prod01.pnpg.internal.prod.selfcare.pagopa.it
+      secretName: prod01-pnpg-internal-prod-selfcare-pagopa-it
+  hosts:
+    - host: "prod01.pnpg.internal.prod.selfcare.pagopa.it"
+      paths:
+        - path: /onboarding/v1/(.*)
+          pathType: ImplementationSpecific
 
 autoscaling:
   enabled: false
