--- a/helm/pnpg/values-uat.yaml
+++ b/helm/pnpg/values-uat.yaml
@@ -5,6 +5,15 @@ image:
 ingress:
   annotations:
     nginx.ingress.kubernetes.io/cors-allow-origin: "https://uat.selfcare.pagopa.it,http://localhost:3000"
+  tls:
+    - hosts:
+        - uat01.pnpg.internal.uat.selfcare.pagopa.it
+      secretName: uat01-pnpg-internal-uat-selfcare-pagopa-it
+  hosts:
+    - host: "uat01.pnpg.internal.uat.selfcare.pagopa.it"
+      paths:
+        - path: /onboarding/v1/(.*)
+          pathType: ImplementationSpecific
 
 autoscaling:
   enabled: false
