fix: Pnpg update pipelines

--- a/helm/pnpg/values-prod.yaml
+++ b/helm/pnpg/values-prod.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: selcpacr.azurecr.io/selfcareonboardingbackend
+  repository: selcpcommonacr.azurecr.io/selfcareonboardingbackend
   pullPolicy: Always # TODO change me in IfNotPresent when each build will have a different tag
   tag: 0.0.1-SNAPSHOT
 
