--- a/helm/pnpg/values-uat.yaml
+++ b/helm/pnpg/values-uat.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: selcuacr.azurecr.io/selfcareonboardingbackend
+  repository: selcucommonacr.azurecr.io/selfcareonboardingbackend
   tag: 0.0.1-SNAPSHOT
 
 ingress:
