--- a/connector/rest/src/main/resources/config/ms-core-rest-client.properties
+++ b/connector/rest/src/main/resources/config/ms-core-rest-client.properties
@@ -3,7 +3,7 @@ rest-client.ms-core.base-url=${MS_CORE_URL:http://10.1.1.250:80/ms-core/v1}
 rest-client.ms-core.onboardingOrganization.path=/onboarding/institution
 rest-client.ms-core.verifyOnboarding.path=/onboarding/institution/{externalId}/products/{productId}
 rest-client.ms-core.getInstitutionByExternalId.path=/external/institutions/{externalId}
-rest-client.ms-core.createPGInstitutionUsingExternalId.path=/institutions/pg/{externalId}
+rest-client.ms-core.createInstitutionUsingInstitutionData.path=/institutions/pg
 feign.client.config.ms-core.connectTimeout=${USERVICE_MS_CORE_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
 feign.client.config.ms-core.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
 feign.client.config.ms-core.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
