--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -5,6 +5,7 @@ rest-client.party-process.verifyOnboarding.path=/onboarding/institution/{externa
 rest-client.party-process.getUserInstitutionRelationships.path=external/institutions/{externalId}/relationships
 rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
+rest-client.party-process.createInstitutionFromIpa.path=/institutions/from-ipa/
 rest-client.party-process.createInstitutionUsingExternalId.path=/institutions/{externalId}
 rest-client.party-process.createInstitutionRaw.path=/institutions/insert/{externalId}
 rest-client.party-process.getInstitutionManager.path=/external/institutions/{externalId}/products/{productId}/manager
