--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -11,6 +11,7 @@ rest-client.party-process.getInstitutionByExternalId.path=/external/institutions
 rest-client.party-process.createInstitutionFromIpa.path=/institutions/from-ipa/
 rest-client.party-process.createInstitutionUsingExternalId.path=/institutions/{externalId}
 rest-client.party-process.createInstitutionRaw.path=/institutions/insert/{externalId}
+rest-client.party-process.createInstitution.path=/institutions/
 rest-client.party-process.getInstitutionManager.path=/external/institutions/{externalId}/products/{productId}/manager
 rest-client.party-process.getInstitutionBillingData.path=/external/institutions/{externalId}/products/{productId}/billing
 feign.client.config.party-process.connectTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
