feat(api): added proxy to core endpoint for tokens complete onboarding

--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -4,6 +4,7 @@ rest-client.party-process.onboardingOrganization.path=/onboarding/institution
 rest-client.party-process.verifyOnboardingByExternalId.path=/onboarding/institution/{externalId}/products/{productId}
 rest-client.party-process.verifyOnboarding.path=/onboarding/
 rest-client.party-process.tokensVerify.path=/tokens/{tokenId}/verify
+rest-client.party-process.onboardingComplete.path=/onboarding/complete/{tokenId}
 rest-client.party-process.getUserInstitutionRelationships.path=external/institutions/{externalId}/relationships
 rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getOnboardings.path=/institutions/{institutionId}/onboardings/
