--- a/connector/rest/src/main/resources/config/ms-core-rest-client.properties
+++ b/connector/rest/src/main/resources/config/ms-core-rest-client.properties
@@ -9,3 +9,18 @@ feign.client.config.ms-core.requestInterceptors[0]=it.pagopa.selfcare.commons.co
 feign.client.config.ms-core.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
 feign.client.config.ms-core.readTimeout=${USERVICE_MS_CORE_REST_CLIENT_READ_TIMEOUT:${REST_CLIENT_READ_TIMEOUT:5000}}
 feign.client.config.ms-core.loggerLevel=${USERVICE_MS_CORE_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
+
+
+rest-client.ms-core-token-api.serviceCode=ms-core-token-api
+feign.client.config.ms-core-token-api.connectTimeout=${USERVICE_MS_CORE_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
+feign.client.config.ms-core-token-api.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
+feign.client.config.ms-core-token-api.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
+feign.client.config.ms-core-token-api.readTimeout=${USERVICE_MS_CORE_REST_CLIENT_READ_TIMEOUT:${REST_CLIENT_READ_TIMEOUT:5000}}
+feign.client.config.ms-core-token-api.loggerLevel=${USERVICE_MS_CORE_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
+
+rest-client.ms-core-onboarding-api.serviceCode=ms-core-onboarding-api
+feign.client.config.ms-core-onboarding-api.connectTimeout=${USERVICE_MS_CORE_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
+feign.client.config.ms-core-onboarding-api.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
+feign.client.config.ms-core-onboarding-api.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
+feign.client.config.ms-core-onboarding-api.readTimeout=${USERVICE_MS_CORE_REST_CLIENT_READ_TIMEOUT:${REST_CLIENT_READ_TIMEOUT:5000}}
+feign.client.config.ms-core-onboarding-api.loggerLevel=${USERVICE_MS_CORE_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
