--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # see https://help.github.com/en/articles/about-code-owners#example-of-a-codeowners-file
 
-* @pagopa/selfcare-contributors @manuraf @KevinSi96
+* @pagopa/selfcare-contributors @manuraf @gianmarcoplutino @KevinSi96
