--- a/helm/pnpg/values-dev.yaml
+++ b/helm/pnpg/values-dev.yaml
@@ -3,7 +3,7 @@ image:
 
 ingress:
   annotations:
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://pnpg.dev.selfcare.pagopa.it,http://localhost:3000"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://imprese.dev.notifichedigitali.it,https://pnpg.dev.selfcare.pagopa.it,http://localhost:3000"
   tls:
     - hosts:
         - dev01.pnpg.internal.dev.selfcare.pagopa.it
