--- a/helm/pnpg/values-prod.yaml
+++ b/helm/pnpg/values-prod.yaml
@@ -5,7 +5,7 @@ image:
 
 ingress:
   annotations:
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://imprese.notifichedigitali.it,https://api-pnpg.selfcare.pagopa.it",https://pnpg.selfcare.pagopa.it"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://imprese.notifichedigitali.it,https://api-pnpg.selfcare.pagopa.it,https://pnpg.selfcare.pagopa.it"
   tls:
     - hosts:
         - prod01.pnpg.internal.selfcare.pagopa.it
