ops: increase read and connection timeout of rest clients

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -20,3 +20,5 @@ configEnvSpecific:
   B4F_ONBOARDING_LOG_LEVEL: "INFO"
   REST_CLIENT_LOGGER_LEVEL: "BASIC"
   ONBOARDING_ALLOWED_INSTITUTIONS_PRODUCTS: "{'prod-interop':{'*'},'prod-pn':{'*'},'prod-io':{'*'},'prod-io-premium':{'*'},'prod-pagopa':{'*'},'prod-io-sign':{'*'}}"
+  REST_CLIENT_READ_TIMEOUT: "30000"
+  REST_CLIENT_CONNECT_TIMEOUT: "30000"
