--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -12,6 +12,7 @@ rest-client.party-process.getInstitutions.path=/institutions/
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
 rest-client.party-process.createInstitutionFromIpa.path=/institutions/from-ipa/
 rest-client.party-process.createInstitutionFromAnac.path=/institutions/from-anac/
+rest-client.party-process.createInstitutionFromIvass.path=/institutions/from-ivass/
 rest-client.party-process.createInstitutionUsingExternalId.path=/institutions/{externalId}
 rest-client.party-process.createInstitutionRaw.path=/institutions/insert/{externalId}
 rest-client.party-process.createInstitution.path=/institutions/
