feature: added API to onboard institution from infocamere registry

--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -15,6 +15,7 @@ rest-client.party-process.createInstitutionFromAnac.path=/institutions/from-anac
 rest-client.party-process.createInstitutionFromIvass.path=/institutions/from-ivass/
 rest-client.party-process.createInstitutionUsingExternalId.path=/institutions/{externalId}
 rest-client.party-process.createInstitutionRaw.path=/institutions/insert/{externalId}
+rest-client.party-process.createInstitutionFromInfocamere.path=/institutions/from-infocamere/
 rest-client.party-process.createInstitution.path=/institutions/
 rest-client.party-process.getInstitutionManager.path=/external/institutions/{externalId}/products/{productId}/manager
 rest-client.party-process.getInstitutionBillingData.path=/external/institutions/{externalId}/products/{productId}/billing
