--- a/connector/rest/src/main/resources/config/party-registry-proxy-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-registry-proxy-rest-client.properties
@@ -3,6 +3,13 @@ rest-client.party-registry-proxy.base-url=${USERVICE_PARTY_REGISTRY_PROXY_URL:ht
 rest-client.party-registry-proxy.getInstitutionsByUserLegalTaxId.path=/info-camere/institutions
 rest-client.party-registry-proxy.matchInstitutionAndUser.path=/national-registries/verify-legal
 rest-client.party-registry-proxy.getInstitutionLegalAddress.path=/national-registries/legal-address
+rest-client.party-registry-proxy.getInstitutionById.path=/institutions/{institutionId}
+rest-client.party-registry-proxy.getCategory.path=/origins/{origin}/categories/{code}
+rest-client.party-registry-proxy.getInstitutionsByLegal.path=/info-camere/institutions
+rest-client.party-registry-proxy.getLegalAddress.path=/national-registries/legal-address
+rest-client.party-registry-proxy.geo-taxonomies.getByCode.path=/geotaxonomies/{geotax_id}
+rest-client.party-registry-proxy.aoo.getByCode.path=/aoo/{aooId}
+rest-client.party-registry-proxy.uo.getByCode.path=/uo/{uoId}
 feign.client.config.party-registry-proxy.connectTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
 feign.client.config.party-registry-proxy.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
 feign.client.config.party-registry-proxy.requestInterceptors[1]=it.pagopa.selfcare.commons.connector.rest.interceptor.PartyTraceIdInterceptor
