--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -14,7 +14,7 @@ ingress:
   hosts:
     - host: "selc.internal.uat.selfcare.pagopa.it"
       paths:
-        - path: /onboarding/v1/(.*)
+        - path: /onboarding/(.*)
           pathType: ImplementationSpecific
 
 autoscaling:
