--- a/helm/pnpg/values-dev.yaml
+++ b/helm/pnpg/values-dev.yaml
@@ -11,7 +11,7 @@ ingress:
   hosts:
     - host: "dev01.pnpg.internal.dev.selfcare.pagopa.it"
       paths:
-        - path: /onboarding/v1/(.*)
+        - path: /onboarding/(.*)
           pathType: ImplementationSpecific
 
 autoscaling:
