--- a/helm/pnpg/values-prod.yaml
+++ b/helm/pnpg/values-prod.yaml
@@ -13,7 +13,7 @@ ingress:
   hosts:
     - host: "prod01.pnpg.internal.selfcare.pagopa.it"
       paths:
-        - path: /onboarding/v1/(.*)
+        - path: /onboarding/(.*)
           pathType: ImplementationSpecific
 
 autoscaling:
