--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -15,7 +15,7 @@ ingress:
   hosts:
     - host: "selc.internal.selfcare.pagopa.it"
       paths:
-        - path: /onboarding/v1/(.*)
+        - path: /onboarding/(.*)
           pathType: ImplementationSpecific
 
 autoscaling:
