--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -51,7 +51,7 @@ ingress:
   hosts:
     - host: ""
       paths:
-        - path: /onboarding/v1/(.*)
+        - path: /onboarding/(.*)
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
