add repo settings

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ build/
 ### VS Code ###
 .vscode/
 .DS_Store
+
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+**/.tfsec/*
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
