--- a/connector/rest/src/main/resources/config/user-registry-rest-client.properties
+++ b/connector/rest/src/main/resources/config/user-registry-rest-client.properties
@@ -5,7 +5,7 @@ rest-client.user-registry.getUserByInternalId.path=/users/{id}
 rest-client.user-registry.patchUser.path=/users/{id}
 rest-client.user-registry.saveUser.path=/users
 rest-client.user-registry.deleteUserById.path=/users/{id}
-feign.client.config.user-registry.defaultRequestHeaders.x-api-key[0]=${USERVICE_USER_REGISTRY_API_KEY:api-key}
+feign.client.config.user-registry.defaultRequestHeaders.x-api-key[0]=${USER-REGISTRY-API-KEY:api-key}
 feign.client.config.user-registry.connectTimeout=${USERVICE_USER_REGISTRY_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
 feign.client.config.user-registry.readTimeout=${USERVICE_USER_REGISTRY_REST_CLIENT_READ_TIMEOUT:${REST_CLIENT_READ_TIMEOUT:5000}}
 feign.client.config.user-registry.loggerLevel=${USERVICE_USER_REGISTRY_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
