add inputs env deploy

--- a/.github/workflows/pr_ms.yml
+++ b/.github/workflows/pr_ms.yml
@@ -1,6 +1,14 @@
 name: Code Review onboarding-backend
 on:
   workflow_dispatch:
+    inputs:
+      env:
+        type: choice
+        description: Environment
+        options: 
+        - dev
+        - uat
+        - prod
 
   pull_request:
     types:
