--- a/.github/workflows/release_ms.yml
+++ b/.github/workflows/release_ms.yml
@@ -2,6 +2,14 @@ name: Release ms-onboarding-backend
 
 on:
   workflow_dispatch:
+    inputs:
+      env:
+        type: choice
+        description: Environment
+        options: 
+        - dev
+        - uat
+        - prod
 
   push:
     branches:
