--- a/.github/workflows/release_open_api.yml
+++ b/.github/workflows/release_open_api.yml
@@ -2,7 +2,7 @@ name: Swagger Detect Conflict and Update
 on:
   pull_request:
     branches:
-      - release-dev
+      - ops/SELC-3954
     types: [ opened, synchronize, reopened ]
     
 permissions:
