--- a/.github/workflows/release_ms.yml
+++ b/.github/workflows/release_ms.yml
@@ -27,7 +27,7 @@ on:
 jobs:
 
   release_dev:
-    uses: pagopa/selfcare-commons/.github/workflows/call_release_docker.yml@EC-149-template-git-hub-workflows
+    uses: pagopa/selfcare-commons/.github/workflows/call_release_docker.yml@main
     name: '[Dev] OnboardingBackend ms Release'
     if: ${{ (startsWith(github.ref_name, 'releases/') != true && inputs.env == null) || inputs.env == 'dev' }}
     secrets: inherit
@@ -37,7 +37,7 @@ jobs:
       dir: 'infra/container_apps'
 
   release_uat:
-    uses: pagopa/selfcare-commons/.github/workflows/call_release_docker.yml@EC-149-template-git-hub-workflows
+    uses: pagopa/selfcare-commons/.github/workflows/call_release_docker.yml@main
     name: '[UAT] OnboardingBackend ms Release'
     if: ${{ (startsWith(github.ref_name, 'releases/') == true && inputs.env == null) || inputs.env == 'uat' }}
     secrets: inherit
@@ -47,7 +47,7 @@ jobs:
       dir: 'infra/container_apps'
 
   release_prod:
-    uses: pagopa/selfcare-commons/.github/workflows/call_release_docker.yml@EC-149-template-git-hub-workflows
+    uses: pagopa/selfcare-commons/.github/workflows/call_release_docker.yml@main
     name: '[Prod] OnboardingBackend ms Release'
     if: ${{ inputs.env == 'prod' }}
     secrets: inherit
