retry with resilience4j

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -29,3 +29,14 @@ logging:
     it.pagopa.selfcare: ${B4F_ONBOARDING_LOG_LEVEL:DEBUG}
   pattern:
     additional-info: ",%X{X-Client-Ip:-}]"
+
+
+resilience4j:
+  retry:
+    retry-aspect-order: 1
+    instances:
+      retryTimeout:
+        max-attempts: 3
+        wait-duration: 5s
+        retry-exceptions:
+          - feign.RetryableException
