--- a/connector/rest/pom.xml
+++ b/connector/rest/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>jackson-databind-nullable</artifactId>
             <version>0.2.4</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
