--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,9 +7,13 @@
         <groupId>it.pagopa.selfcare</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>selc-onboarding-core</artifactId>
+
+    <properties>
+        <commons-sdk-version>0.5.0</commons-sdk-version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -19,7 +23,7 @@
         <dependency>
             <groupId>it.pagopa.selfcare</groupId>
             <artifactId>onboarding-sdk-common</artifactId>
-            <version>0.2.2</version>
+            <version>${commons-sdk-version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
