fix: fixed complete onboarding rest client

--- a/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
+++ b/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
@@ -1,10 +1,10 @@
-
 rest-client.ms-onboarding.base-url=${MS_ONBOARDING_URL:http://10.1.1.250:80/ms-onboarding/v1}
 rest-client.ms-onboarding-api.serviceCode=ms-onboarding-api
 rest-client.ms-onboarding-token-api.serviceCode=ms-onboarding-token-api
 rest-client.ms-onboarding-aggregates-api.serviceCode=ms-onboarding-aggregates-api
 rest-client.ms-onboarding-institution-api.serviceCode=ms-onboarding-institution-api
 rest-client.ms-onboarding-support-api.serviceCode=ms-onboarding-support-api
+rest-client.ms-onboarding-internal-api.serviceCode=ms-onboarding-internal-api
 feign.client.config.ms-onboarding-api.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
 feign.client.config.ms-onboarding-api.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
 feign.client.config.ms-onboarding-api.readTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_READ_TIMEOUT:${REST_CLIENT_READ_TIMEOUT:5000}}
