feat: Added handler to return feign exception error

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -35,6 +35,10 @@
             <artifactId>onboarding-sdk-common</artifactId>
             <version>${commons-sdk-version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
 
     </dependencies>
 
