fix: added path for api-docs.json to gh release job

--- a/.github/workflows/release_ms_pnpg.yml
+++ b/.github/workflows/release_ms_pnpg.yml
@@ -34,6 +34,7 @@ jobs:
     with:
       environment: dev
       tf_environment: dev-pnpg
+      path_openapi_docs: app/src/main/resources/swagger/api-docs.json
       dir: 'infra/container_apps'
 
   release_uat:
@@ -44,6 +45,7 @@ jobs:
     with:
       environment: uat
       tf_environment: uat-pnpg
+      path_openapi_docs: app/src/main/resources/swagger/api-docs.json
       dir: 'infra/container_apps'
 
   release_prod:
@@ -54,4 +56,5 @@ jobs:
     with:
       environment: prod
       tf_environment: prod-pnpg
+      path_openapi_docs: app/src/main/resources/swagger/api-docs.json
       dir: 'infra/container_apps'
