--- a/.github/workflows/release_ms.yml
+++ b/.github/workflows/release_ms.yml
@@ -34,6 +34,7 @@ jobs:
     with:
       environment: dev
       tf_environment: dev
+      path_openapi_docs: app/src/main/resources/swagger/api-docs.json
       dir: 'infra/container_apps'
 
   release_uat:
@@ -44,6 +45,7 @@ jobs:
     with:
       environment: uat
       tf_environment: uat
+      path_openapi_docs: app/src/main/resources/swagger/api-docs.json
       dir: 'infra/container_apps'
 
   release_prod:
@@ -54,6 +56,7 @@ jobs:
     with:
       environment: prod
       tf_environment: prod
+      path_openapi_docs: app/src/main/resources/swagger/api-docs.json
       dir: 'infra/container_apps'
 
   promote_release:
