Added dependency and first config for cucumber

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ override.tf.json
 
 #EXCLUSION FOR INTELLIJ CONFIG START
 .**/run/**
+
+##CUCUMBER AZURERITE STORAGE
+app/src/test/resources/storagedata/**
