Fixed config and added more feature

--- a/app/src/test/resources/docker-compose.yml
+++ b/app/src/test/resources/docker-compose.yml
@@ -104,7 +104,12 @@ services:
       dockerfile: "Dockerfile-fn"
     networks:
       - develop-network
-
+    depends_on:
+      - mongo-db
+      - mock-server
+      - azure-cli
+      - azurite
+      
 networks:
   develop-network:
     name: selfcare-develop-network
